Pushed all drawers further down to prevent visual artifacts on IOs

--- a/src/_styles/components/navigation/search.scss
+++ b/src/_styles/components/navigation/search.scss
@@ -24,7 +24,7 @@
     width: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    transform: translateY(100%);
+    transform: translateY(120%);
 
     &.is-open {
       transform: translateY(0);
